fix: corrigindo fluxo de jogo